--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
@@ -11,10 +11,26 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 
 
 अथास्य वंश-प्रतिरोह-बीजं  
-मही-भुजो गर्भम् अधत्त देवी।  
+मही-भुजो **गर्भम् अधत्त देवी**।  
 जगत्-त्रयोद्भूति-निदान+++(=मुख्यकारण)+++-भूतं  
 तेजो विधातुः प्रथमेव सृष्टिः ॥ १ ॥+++(5)+++  
 
+<details><summary>मूलम्</summary>
+
+अथास्य वंशप्रतिरोहबीजं  
+महीभुजो गर्भमधत्त देवी ।  
+जगत्त्रयोद्भूतिनिदानभूतं  
+तेजो विधातुः प्रथमेव सृष्टिः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+In time the King sired upon the Queen  
+the seed which would perpetuate the dynasty –  
+just as the creator sires upon primaeval matter  
+the energy which brings into being the three worlds.
+1
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
@@ -23,10 +39,30 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-**मुखेन** तन्वी शर-पाण्डरेण  
+**मुखेन** तन्वी शर+++(पादप)+++-पाण्डरेण  
 विमुक्त-रत्नाभरणा **विरेजे**।  
 विलून-राजीव-वना दिनान्ते  
 +++(प्रतिबिम्ब)+++छाया-शशाङ्केन शरन्-नदीव ॥ २ ॥  
+
+<details><summary>मूलम्</summary>
+
+मुखेन तन्वी शरपाण्डरेण  
+विमुक्तरत्नाभरणा विरेजे ।  
+विलूनराजीववना दिनान्ते  
+छायाशशाङ्केन शरन्नदीव ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+Slender,  
+no more oppressed by ornaments,  
+her round face reed-pale,  
+the Queen resembled a river run to a trickle in Śarad,  
+no longer blanketed in day-blossoming lotus blooms,  
+harbouring the orbed moon  
+as night draws near.
+2
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -38,8 +74,8 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 
 गर्भ-स्थितस्येव शिशोर् विधातुं  
 वसुन्धरा-मण्डल-भार-शिक्षाम्।  
-अरोचयत् पार्थिव-धर्मपत्नी  
-मन्ये मृदास्वाद-रसाऽनुबन्धम् ॥ ३ ॥  
+**अरोचयत्** पार्थिव-धर्मपत्नी  
+मन्ये **मृदास्वाद-रसाऽनुबन्धम्** ॥ ३ ॥  
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -49,9 +85,28 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-अनन्य-सामान्य-भुजापदानम्  
-उत्पत्स्यमानं तनयं नृपम्य।  
-अनारतं वीररसानुबन्धं न्यवेदयद् दौहृदमेव देव्याः ॥ ४ ॥  
+अनन्य-सामान्य-भुजापदानम्+++(=भुजकर्म)+++  
+उत्पत्स्यमानं **तनयं** नृपस्य।  
+अनारतं वीर-रसानुबन्धं  
+**न्यवेदयद् दौहृदम्** +++(कामनं)+++ एव देव्याः ॥ ४ ॥  
+
+
+<details><summary>मूलम्</summary>
+
+अनन्यसामान्यभुजापदान-  
+मुत्पत्स्यमानं तनयं नृपस्य ।  
+अनारतं वीररसानुबन्धं  
+न्यवेदयद्दौहृदमेव देव्याः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+The pregnant queen’s cravings   
+ever veered towards the heroic,   
+suggesting that the royal heir she would soon bear  
+would author deeds assayed by no other.
+3
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -72,8 +127,30 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-अपारयन्ती चरितैणशावं क्रीडाचलोपान्तमपि प्रयातुम्।  
-आखेटरागादधिरोढुमैच्छन्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥ ६ ॥  
+**अपारयन्ती** चरितैणशावं  
+क्रीडाचलोपान्तम् अपि प्रयातुम् ।  
+आखेट-रागाद् **अधिरोढुम् ऐच्छन्**  
+माद्यन्-मृगेन्द्रान् **मलयाद्रि-कूटान्** ॥ ६ ॥ +++(4)+++ 
+
+<details><summary>मूलम्</summary>
+
+अपारयन्ती चरितैणशाबं  
+क्रीडाचलोपान्तमपि प्रयातुम् ।  
+आखेटरागादधिरोढुमैच्छ-  
+न्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+So spent was her strength  
+she couldn’t even reach  
+the foot of the ornamental hill  
+where fawns scampered,  
+yet in her thirst for a kill  
+she dreamed of climbing the mighty Malaya mountain  
+to hunt maddened lions.
+4
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -94,9 +171,40 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-पृथ्वी रथः सारथिरब्जसूतिः शेषेण सज्यं धनुरद्रिराजः।  
-शरश्च शौरिः किल हन्त लक्ष्यं त्रयं पुगमित्यहसत् पुरारिम् ॥ ८ ॥  
+पृथ्वी रथः, सारथिर् अब्-ज-सूतिः +++(ब्रह्मा)+++  
+शेषेण सज्यं, धनुर् अद्रिराजः +++(मेरुः)+++ ।  
+शरश् च शौरिः, किल हन्त लक्ष्यं  
+त्रयं पुराम् इत्य् **अहसत् पुरारिम्** ॥ ८ ॥ +++(5)+++ 
 
+<details><summary>मूलम्</summary>
+
+पृथ्वी रथः सारथिरब्जसूतिः  
+शेषेण सज्यं धनुरद्रिराजः ।  
+शरश्च शौरिः किल हन्त लक्ष्यं  
+त्रयं पुरामित्यहसत् पुरारिम् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+‘The earth for a chariot;  
+Brahmā himself the charioteer.  
+The king of snakes serving as bowstring,  
+and Mount Meru his bow.  
+And, so they say,  
+no less than Śauri[^1] as his shaft.  
+To fight whom?  
+A mere triad of cities!’  
+Thus did she scorn Śiva,  
+conqueror of the three cities.[^2]
+5
+
+[^2]: Śiva had all this and more when he went to fight the *asuras’* Tripura.
+
+
+[^1]: Viṣṇu
+
+
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
@@ -116,8 +224,34 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-सौभाग्यगन्धद्विपदानलेखा रराज तस्या नवरोमराजिः।  
-तेजोनिधिं गर्भतले निगूढं कालोरगी रक्षितुमागतेव ॥ १० ॥  
+सौभाग्य-गन्ध--द्वि-प--दान-लेखा  
+**रराज** तस्या **नव-रोम-राजिः** +++(नाभ्या अधः)+++ ।  
+तेजो-निधिं गर्भ-तले निषण्णं  
+कालोरगी रक्षितुम् आगतेव ॥ १० ॥ +++(5)+++  
+
+<details><summary>मूलम्</summary>
+
+सौभाग्यगन्धद्विपदानलेखा  
+रराज तस्या नवरोमराजिः ।  
+तेजोनिधिं गर्भतले निषण्णं  
+कालोरगी रक्षितुमागतेव ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+A fresh line of fine hair flashed below her navel –  
+glistening like a streak of ichor from  
+the mighty elephant of her waxing fortune –  
+as though it were a cobra  
+come to guard the luminous treasure  
+buried deep within her womb.[^3]
+6
+
+[^3]: Snakes are often thought of as guardians of treasure.
+
+
+</details>
+
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -160,8 +294,31 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-अथ प्रशस्ते दिवसे समस्तैर्मोहूर्तिकैः साधितपुण्यलग्ने।  
-असूत सूनुं नरनाथपत्नी देवी महासेनमिवेन्दुमौलेः ॥ १४ ॥  
+अथ प्रशस्ते दिवसे, समस्तैर्  
+मौहूर्तिकैः साधित-पुण्य-लग्ने ।  
+**असूत सूनुं** नर-नाथ-पत्नी  
+देवी महा-सेनम् इवेन्दु-मौलेः ॥ १४ ॥  
+
+<details><summary>मूलम्</summary>
+
+अथ प्रशस्ते दिवसे समस्तै-  
+र्मौहूर्तिकैः साधितपुण्यलग्ने ।  
+असूत सूनुं नरनाथपत्नी  
+देवी महासेनमिवेन्दुमौलेः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+Then on the happy day –  
+declared by astrologers near and far  
+to be blessed with an auspicious star –  
+the earthly lord’s lady  
+bore a son who would lead a mighty army;  
+just as Pārvatī,  
+consort to the moon-crested Śiva,  
+bore Kumāra, leader of heaven’s army.
+7
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -171,9 +328,27 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-महौजसन्तस्य निजैर्यशोभिरुद्वेलदुग्धोदधिपूरगौरैः।  
-प्रक्षालितानीव तदा बभूवुधृतप्रसादानि दिशां मुखानि ॥ १५ ॥  
+महौजसस् तस्य निजैर् यशोभिर्  
+उद्वेल-दुग्धोदधि-पूर-गौरैः ।  
+**प्रक्षालितानीव** तदा **बभूवुर्**  
+धृत-प्रसादानि **दिशां मुखानि** ॥ १५ ॥ +++(5)+++  
 
+<details><summary>मूलम्</summary>
+
+महौजसस्तस्य निजैर्यशोभि-  
+रुद्वेलदुग्धोदधिपूरगौरैः ।  
+प्रक्षालितानीव तदा बभूवु-  
+र्धृतप्रसादानि दिशां मुखानि ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+At that moment,  
+the faces of the directions grew clear  
+as if washed clean by the gleaming child’s glory,  
+white as the flood of the milky sea spilling its shores.
+8
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
@@ -192,8 +367,28 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 
 </details>
 
-आगामिनीमध्वरहव्यसिद्धिं निश्चित्य देशेष्वपि दक्षिणेषु।  
-प्रदक्षिणीभूतशिखाकलापो ननत हर्षादिव हव्यवाहः ॥ १७ ॥  
+आगामिनीम् अध्वर-हव्य-सिद्धिं  
+निश्चित्य देशेष्व् अपि दक्षिणेषु ।  
+प्रदक्षिणी-भूत-शिखा-कलापो  
+**ननर्त** हर्षाद् इव **हव्यवाहः** ॥ १७ ॥+++(5)+++  
+
+<details><summary>मूलम्</summary>
+
+आगामिनीमध्वरहव्यसिद्धिं  
+निश्चित्य देशेष्वपि दक्षिणेषु ।  
+प्रदक्षिणीभूतशिखाकलापो  
+ननर्त हर्षादिव हव्यवाहः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+Realising that sacrificial oblations  
+would soon be offered in the South too,  
+the fire danced a jig of joy,  
+weaving his mass of flames into worshipful arcs –  
+or so it seemed.
+9
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -247,9 +442,29 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 
 </details>
 
-सुखायमानों सुतजन्मवातौं सहर्षमावेदयते जनाय ।
-अवाञ्छदात्मानमपि प्रदातुं कुतूहली कुन्तलभूमिपालः ॥ २२ ॥   
+सुखायमानां सुतजन्मवार्तां  
+सहर्षम् आवेदयते जनाय ।  
+**अवाञ्छद् आत्मानम् अपि प्रदातुं**  
+कुतूहली कुन्तल+++(=उत्तरकर्णाट)+++-भूमिपालः ॥ २२ ॥ +++(4)+++  
 
+<details><summary>मूलम्</summary>
+
+सुखायमानां सुतजन्मवार्तां  
+सहर्षमावेदयते जनाय ।  
+अवाञ्छदात्मानमपि प्रदातुं  
+कुतूहली कुन्तलभूमिपालः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+In his euphoria,  
+the Kuntala king  
+was ready to give his very self  
+to the exultant servants  
+bringing the sweet news  
+of his son’s birth.
+10
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
@@ -257,8 +472,29 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 
 </details>
 
-विशृङ्खलास्तस्य गिरा निरीयुः कारागृहेभ्यो विमतावरोधाः ।
-तुलुष्कबन्दीनिवहाय तूर्णमागामिने दातुमिवावकाशम् ॥ २३ ॥  
+विशृङ्खलास् तस्य गिरा **निरीयुः**  
+कारागृहेभ्यो **विमतावरोधाः** +++(नार्यः)+++ ।  
+तुलुष्क-बन्दी-निवहाय तूर्णम्  
+आगामिने दातुम् इवावाकाशम् ॥ २३ ॥  +++(5)+++
+
+<details><summary>मूलम्</summary>
+
+विशृङ्खलास्तस्य गिरा निरीयुः  
+कारागृहेभ्यो विमतावरोधाः ।  
+तुलुष्कबन्दीनिवहाय तूर्ण-  
+मागामिने दातुमिवावाकाशम् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+Upon the Emperor’s orders,  
+the womenfolk of the vanquished  
+were unshackled and released from their prison cells,  
+as if to make room  
+for the trillion Tuluṣka wives and daughters,  
+soon to arrive.
+11
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -268,9 +504,30 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 </details>
 
 
-SHARE
-स्नातन्ततो धौतदुकूलधारी बितीर्य भूरि द्रविणं द्विजेभ्यः।  
-महीपतिः पुत्रमुखं दिदृक्षुः प्राविक्षदन्तःपुरमात्तहर्षः ॥ २४ ॥  
+
+स्नातस् ततो धौत-दुकूल-धारी  
+**वितीर्य** भूरि **द्रविणं** द्विजेभ्यः ।  
+महीपतिः पुत्र-मुखं दिदृक्षुः  
+**प्राविक्षद् अन्तःपुरम्** आत्तहर्षः ॥ २४ ॥  
+
+<details><summary>मूलम्</summary>
+
+स्नातस्ततो धौतदुकूलधारी  
+वितीर्य भूरि द्रविणं द्विजेभ्यः ।  
+महीपतिः पुत्रमुखं दिदृक्षुः  
+प्राविक्षदन्तःपुरमात्तहर्षः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+Then the King,  
+after bathing and dressing in sparkling new silks,  
+bestowed lavish gifts upon Brahmins.  
+Longing to look upon his new-born son,   
+he came to his queens’ quarters  
+aquiver with joy.
+12
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -280,8 +537,30 @@ SHARE
 </details>
 
 
-अवैक्षत क्षामशरीरयष्टेः कुमारमुत्सङ्गगतं स देव्याः।  
-शरत्कृशाया इव शैवलिन्यास्तरङ्गलग्न कलहंसशाबम् ॥ २५ ॥  
+अवैक्षत क्षाम-शरीर-यष्टेः  
+कुमारम् उत्सङ्ग-गतं स देव्याः ।  
+शरत्-कृशाया इव शैवलिन्यास्+++(←शैवल=moss)+++  
+तरङ्ग-लग्नं कल-हंस-शावम् ॥ २५ ॥  +++(4)+++ 
+
+
+<details><summary>मूलम्</summary>
+
+अवैक्षत क्षामशरीरयष्टेः  
+कुमारमुत्सङ्गगतं स देव्याः ।  
+शरत्कृशाया इव शैवलिन्या-  
+स्तरङ्गलग्नं कलहंसशाबम् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+He beheld his son  
+rocking in the lap of the Queen,  
+her thin frame grown frail,  
+like a young *haṃsa*  
+bobbing upon the billow of a river  
+slimmed by Śarad.
+13
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
