--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sv_sanxepaH/2.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sv_sanxepaH/2.md
@@ -106,8 +106,7 @@ Thus did she scorn Śiva,
 conqueror of the three cities.[^2]
 5
 
-[^2]: Śiva had all this and more when he went to fight the *asuras’* Tripura.[^4]: The poetess earlier described, in a verse not included here, how Bukkarāja had two more sons by Devāyī.
-
+[^2]: Śiva had all this and more when he went to fight the *asuras’* Tripura.
 
 [^1]: Viṣṇu
 
@@ -430,6 +429,10 @@ as this worldly life with its threefold goals
 *dharma, kāma* and *artha* –  
 so the King shone with his three sons[^4].
 20
+
+
+[^4]: The poetess earlier described, in a verse not included here, how Bukkarāja had two more sons by Devāyī.
+
 </details>
 
 
