--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
@@ -581,10 +581,29 @@ slimmed by Śarad.
 </details>
 
 
-६
-मुहुर्मुहुः पल्लवपाटलेन मुष्टीकृतेन द्वितयेन पाण्योः ।
-अरातिलक्ष्मीकचसंचयानामाकर्षशिक्षामिव शीलयन्तम् ॥ २७ ॥  
+मुहुर् मुहुः पल्लव-पाटलेन  
+मुष्टी-कृतेन द्वितयेन पाण्योः ।  
+अराति-लक्ष्मी-कच-सञ्चयानाम्  
+**आकर्ष-शिक्षाम् इव शीलयन्तम्** ॥ २७ ॥  +++(5)+++ 
 
+<details><summary>मूलम्</summary>
+
+मुहुर्मुहुः पल्लवपाटलेन  
+मुष्टीकृतेन द्वितयेन पाण्योः ।  
+अरातिलक्ष्मीकचसञ्चयाना-  
+माकर्षशिक्षामिव शीलयन्तम् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+As the child formed fists again and again  
+with hands pale pink like fresh shoots,  
+it seemed he was practising  
+how to wrest from his rivals  
+the tutelary goddess of each,  
+dragging them by their tightly tied braids.
+14
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
@@ -629,8 +648,27 @@ slimmed by Śarad.
 
 (षड्भिः कुलकम् ।)
 
-अव्याजसौन्दर्यगुणाभिरामं कुमारमालोकयतश्चिराय।  
-नृपस्य निप्पन्ददृशो मुहूर्तमानन्दवाप्पोऽभवदन्तरायः ॥ ३१ ॥  
+अ-व्याज-सौन्दर्य-गुणाभिरामं  
+**कुमारम् आलोकयतश्** चिराय ।  
+नृपस्य निष्पन्द-दृशो मुहूर्तम्  
+**आनन्द-बाष्पो ऽभवद् अन्तरायः** ॥ ३१ ॥  +++(5)+++ 
+
+<details><summary>मूलम्</summary>
+
+अव्याजसौन्दर्यगुणाभिरामं  
+कुमारमालोकयतश्चिराय ।  
+नृपस्य निष्पन्ददृशो मुहूर्त-  
+मानन्दबाष्पोऽभवदन्तरायः ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+A tear of joy for a moment obscured  
+the Lord’s long and unblinking gaze  
+as he stared at the child he had sired,  
+enthralled by his unadorned beauty.
+15
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
