--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
@@ -537,8 +537,8 @@ aquiver with joy.
 </details>
 
 
-अवैक्षत क्षाम-शरीर-यष्टेः  
-कुमारम् उत्सङ्ग-गतं स देव्याः ।  
+**अवैक्षत** क्षाम-शरीर-यष्टेः  
+**कुमारम्** उत्सङ्ग-गतं स देव्याः ।  
 शरत्-कृशाया इव शैवलिन्यास्+++(←शैवल=moss)+++  
 तरङ्ग-लग्नं कल-हंस-शावम् ॥ २५ ॥  +++(4)+++ 
 
@@ -678,9 +678,30 @@ enthralled by his unadorned beauty.
 </details>
 
 
-आश्लिष्यतस्तस्य दृशा तनुजमन्तः प्रहर्षेण विजम्भितेन।  
-प्रायः प्रणुन्नैबहिरङ्गकेभ्यः प्रादुर्बभूबे पुलकप्ररोहैः ॥ ३२ ॥  
+आश्लिष्यतस् तस्य दृशा तनूजम्  
+अन्तः प्रहर्षेण विजृम्भितेन ।  
+प्रायः प्रणुन्नैर् बहिर्-अङ्गकेभ्यः  
+**प्रादुर्-बभूवे पुलक-प्ररोहैः** ॥ ३२ ॥ +++(5)+++ 
 
+
+<details><summary>मूलम्</summary>
+
+आश्लिष्यतस्तस्य दृशा तनूज-  
+मन्तः प्रहर्षेण विजृम्भितेन ।  
+प्रायः प्रणुन्नैर्बहिरङ्गकेभ्यः  
+प्रादुर्बभूवे पुलकप्ररोहैः ॥
+</details>
+
+
+<details><summary>Shankar & Venetia</summary>
+
+As the King drank in his son with his eyes,  
+the happiness within him swelled to bursting  
+and appeared to push out the very hair  
+on each part of his body  
+so that he prickled with goosebumps.
+16
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
